# zigma

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
zigma/: base64.c  base64.h  buffer.c  buffer.h  common.c  common.h  main.c  registry.c  registry.h  typedef.h  zigma.c  zigma.h
zigmatiq/: base64.h  buffer.c  buffer.h  common.c  common.h  main.c  registry.c  registry.h  zigma.c  zigma.h
